# ci-and-cd-demo

./: .gitignore  Jenkinsfile  README.md  debug.ipynb  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: actions-dev.yml  actions-main.yml  ci-dev-self-hosted-runners.yml  ci-main-self-hosted-runners.yml  ci-self-hosted-runner.yml  ci-self-hosted-runners.yml  ci.yml  dev-self-hosted-runners.yml  dev-self-hosted.yml  dev.yml  main-runners.yml  main-self-hosted-runners.yml  main-self-hosted.yml  main.yml  self-hosted-dev.yml  self-hosted-main.yml
actions-runner/: Dockerfile  entrypoint.sh
blog/: tests.py
blog/migrations/: 0001_initial.py
client/: .dockerignore  .gitignore  .graphqlrc.yml  Dockerfile  README.md  package.json  schema.graphql
db/: Dockerfile
deploy/: Dockerfile  deploy_from_nexus.sh  entrypoint.sh  gunicorn.conf.py  nginx.conf
docs/: client.md  db.md  deploy.md  github-actions-self-hosted-runners.md  github.md  jenkins-set-up-pipeline-docker.md  jenkins-set-up-pipeline-ssh-command.md  jenkins.md  nexus.md  port_forwarding.md  runner.md  web-hooks.md
docs/github/: hosted-runners.md  index.md  self-hosted-runner.md
jenkins/: Dockerfile
project/: settings.py
runner/: Dockerfile  entrypoint.sh
server/: .dockerignore  Dockerfile  Jenkinsfile  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt
server/blog/: schema.py  types.py  urls.py  views.py
server/blog/templates/blog/: post_form.html  post_list.html
server/project/: schema.py  settings.py  urls.py
(+10 files in other folders)
