[project]
name = "ci-and-cd-damo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "gunicorn>=23.0.0",
    "strawberry-graphql-django>=0.59.1",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.14",
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
]
